# linux-whisper-stt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
src/linux_whisper_stt/: autostart.py  cli.py  config.py  controller.py  daemon.py  gnome_shortcut.py  history.py  ipc.py  jobs.py  open_with.py  secrets.py  sounds.py  systemd.py
src/linux_whisper_stt/assets/: __init__.py
src/linux_whisper_stt/audio/: recorder.py
src/linux_whisper_stt/media/: chunking.py  prepare.py
src/linux_whisper_stt/output/: clipboard.py  manager.py  paste.py
src/linux_whisper_stt/transcribe/: base.py  local_backend.py  manager.py  openai_backend.py
src/linux_whisper_stt/tray/: indicator.py
src/linux_whisper_stt/ui/: history_panel.py  result_window.py  setup_window.py
tests/: test_assets.py  test_autostart.py  test_chunking.py  test_cli.py  test_clipboard.py  test_config.py  test_controller.py  test_daemon.py  test_gnome_shortcut.py  test_history.py  test_history_panel.py  test_indicator.py  test_install_script.py  test_ipc.py  test_jobs.py  test_local_backend.py  test_media_prepare.py  test_open_with.py  test_openai_backend.py  test_output_manager.py  test_paste.py  test_readme.py  test_recorder.py  test_result_window.py  test_secrets.py  test_setup_window.py  test_smoke.py  test_sounds.py  test_systemd.py  test_transcription_manager.py
