[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-whisper-stt"
version = "0.1.0"
description = "Speech-to-text for Linux: global-shortcut dictation via OpenAI or local whisper.cpp"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40",
    "keyring>=24",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
linux-whisper-stt = "linux_whisper_stt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
